bad/assign_class_casted_null_void.example_compiler_output
ERROR
[1mbad/assign_class_casted_null_void.lat:7:10: [1;31merror: [0;1mleft side is not assignable[m
	(Y)null = vfunc();
	        [1;32m^[m
[1mbad/assign_class_casted_null_void.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	(Y)null = vfunc();
	[1;32m^[m
